--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -1,3 +1,6 @@
-spring.data.mongodb.uri= mongodb://localhost:27017/product-service
-spring.data.mongodb.option.connect-timeout=30000
-spring.data.mongodb.option.socket-timeout=30000
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3307/order-service
+spring.datasource.username=myuser
+spring.datasource.password=mypassword
+spring.jpa.hibernate.ddl-auto=update
+server.port=8081
