--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3307/order-service
+spring.datasource.url=jdbc:mysql://localhost:3307/inventory-service
 spring.datasource.username=myuser
 spring.datasource.password=mypassword
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 server.port=8083
